--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Елизавета Чапурен</title>
+  <title>Портфолио</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -30,20 +30,6 @@
       padding: 20px;
     }
 
-    .skills {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .skill {
-      background: #e0f7fa;
-      padding: 8px 16px;
-      border-radius: 20px;
-      font-size: 0.95rem;
-      color: #00796b;
-    }
-
     .container {
       max-width: 1200px;
       margin: 0 auto;
@@ -61,12 +47,28 @@
       object-fit: cover;
       border: 4px solid white;
       box-shadow: 0 10px 30px rgba(67, 97, 238, 0.3);
-      margin-bottom: 20px;
+      margin: 20px 0;
       transition: transform 0.3s ease;
     }
+    .photo {
+    width: 300px;
+    height: auto;
+    border-radius: 12px;
+    object-fit: cover;
+    border: 4px solid white;
+    box-shadow: 0 10px 30px rgba(67, 97, 238, 0.3);
+    margin: 20px 0;
+    transition: transform 0.3s ease;
+    }
+    
 
-    .avatar:hover {
-      transform: scale(1.05);
+    .avatar {
+      border-radius: 50%;
+    }
+
+    .avatar:hover,
+    .photo:hover {
+      transform: scale(1.03);
     }
 
     h1 {
@@ -115,34 +117,6 @@
       border-radius: 2px;
     }
 
-    .timeline-item {
-      margin-bottom: 25px;
-      padding-left: 20px;
-      position: relative;
-    }
-
-    .timeline-item::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 8px;
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background: #3498db;
-    }
-
-    .timeline-item h3 {
-      margin-bottom: 5px;
-    }
-
-    .timeline-item .date {
-      color: #7f8c8d;
-      font-style: italic;
-      margin-bottom: 8px;
-      display: block;
-    }
-
     .contact-links p {
       margin: 8px 0;
     }
@@ -173,18 +147,14 @@
     section:nth-of-type(2) { animation-delay: 0.2s; }
     section:nth-of-type(3) { animation-delay: 0.3s; }
     section:nth-of-type(4) { animation-delay: 0.4s; }
-    section:nth-of-type(5) { animation-delay: 0.5s; }
 
     @media (max-width: 768px) {
-      .avatar {
-        width: 200px;
-        height: 200px;
+      .avatar, .photo {
+        width: 220px;
       }
-
       h1 {
         font-size: 2.2rem;
       }
-
       section {
         padding: 25px;
       }
@@ -199,45 +169,26 @@
       <p class="subtitle">Студентка ВГУ Факультета Компьютерных наук</p>
     </header>
 
-<section id="about">
-      <h2>Обо мне</h2>
-      <p>Привет! Хочу поделиться некоторыми фактами, связанными со мной.</p>
+    <section>
+      <h2>Привет! Вы перешли по ссылке и попали на эту страничку, здесь я расскажу немного о себе</h2>
     </section>
 
-    <section id="skills">
-      <h2>Мои увлечения</h2>
-      <div class="skills">
-        <span class="skill">Танцы</span>
-        <span class="skill">Волейбол</span>
-        <span class="skill">Спорт</span>
-        <span class="skill">Кулинария (для души и вкусной еды для себя и близких)</span>
-        <span class="skill">Путешествия</span>
-      </div>
+    <section>
+      <h2>Немного обо мне</h2>
+      <p>Я родилась в Воронежской области. С детства занимаюсь различными видами спорта: лёгкая атлетика, волейбол, а также танцами. Училась в музыкальной школе.</p>
+      <p>После окончания школы решила пойти в IT-сферу — пока только учусь. Надеюсь, у меня всё получится, и через некоторое время это портфолио будет дополняться различной информацией, но пока так!</p>
+      <p>Оставлю и здесь свою фотографию, чтобы не забыли, как выгляжу!</p>
+      <img src="images/ww.jpg" alt="Фотография Елизаветы" class="photo">
     </section>
 
-    <section id="hobbies-details">
-      <h2>Более подробно обо мне и моих увлечениях</h2>
-      <p>Я очень люблю фильмы и сериалы, и в любую свободную минутку (чаще всего это бывает по выходным) после тяжёлой недели я стараюсь посмотреть какие-нибудь интересные фильмы или сериалы.</p>
-      <p>Поэтому я решила поделиться ссылкой, где можно увидеть список различных фильмов или сериалов, которые вам могут понравиться!</p>
-      <p>
-        <a href="https://www.eldorado.ru/blog/publications/spisok-luchshikh-semeynykh-filmov-s-vysokim-reytingom-36136?utm_source=yandex&utm_medium=organic&utm_campaign=yandex&utm_referrer=yandex" target="_blank">Кликни сюда!</a>
-        А перейдя по следующей <a href="portfolio.html">ссылке</a>, можно узнать немного больше интересных фактов обо мне!
-      </p>
+    <section>
+      <h2>Спасибо за внимание! Вы посетили мой первый сайт — я думаю, вам понравилось!</h2>
     </section>
 
-    <section id="education">
-      <h2>Образование</h2>
-      <div class="timeline-item">
-        <span class="date">2025 — 2029</span>
-        <h3>ФКН: "Прикладная информатика в экономике"</h3>
-        <p>Воронежский государственный университет</p>
-      </div>
-    </section>
-
-    <section id="contacts">
+    <section>
       <h2>Контакты</h2>
       <div class="contact-links">
-        <p>📧 Email: <a href=":elizavetachapuren@yandex.ru">elizavetachapuren@yandex.ru</a></p>
+        <p>📧 Email: <a href="mailto:elizavetachapuren@yandex.ru">elizavetachapuren@yandex.ru</a></p>
         <p>📱 Телефон: +7 (951) 544-72-93</p>
         <p>💼 VK: <a href="https://vk.com/chilaveka" target="_blank">Чапурен Елизавета</a></p>
       </div>
